		       an even number means stable while odd marks 
		       development releases
  Z = revision       - small changes to major.minor version (optional)

  extraT             - beta, pre and rc releases that are in preparation
		       of major releases (optional)

-----------------------------------------------------------------------

??102002 (v2.2.0-pre4)
	- added: eiam - command 'cop-descriptions',
		 'ctrl-descriptions', 'ladspa-descriptions' and 
		 'preset-descriptions'; see ecasound-iam(1) man
		 page for details
	- changed: libecasoundc now LGPL licensed
	- removed: eiam - all mentions of map commands from the 
		   man page; these were never implemented
19102002 (v2.2.0-pre3)
	- fixed: reverted to using old ALSA 0.9 hw-params API,
		 ecasound agains works with old 0.9beta and 0.9rc 
		 ALSA versions
18102002 (v2.2.0-pre2)
	- fixed: ALSA objects weren't properly registered as audio
		 object types
	- fixed: debug level was resetted to 0 after issuing
		 'int-output-mode-wellformed'
	- fixed: automake complained about multiple definition
	 	 of ecasoundc_sa
17102002 (v2.2.0-pre1)
	- edi-entries: edi-24, edi-28, edi-29, edi-30
	- note: libecasound and libkvutils interface version numbers
		will from now on track API changes instead of ABI
	        changes
	- added: edi-24; resample audio object added
	- added: edi-29; initial version of ecamonitor
	- added: edi-28; eiam-command 'int-output-mode-wellformed'
	- removed: edi-30; ecasound internal plugins no longer
		   installed separately
	- changed: ALSA support requires alsa-lib version 
		   0.9rc4 or newer
	- changed: libecasoundc versioning back to normal libtool 
		   style; interface version reverted back to 1:0:0
	- changed: edi-28; C implementation of ECI, libecasoundc, 
	           is rewritten to not depend on libecasound
	- changed: edi-28; pyecasound is rewritten to use the 
	           new C ECI implementation instead of direct
		   use of libecasound